# tmax

./: .gitignore  LICENSE  README.md  pyproject.toml
TassieAgent/: __init__.py  agent.py
TassumAgent/: __init__.py  agent.py
Vanillux2Agent/: agent.py
beaker_configs/: launch_eval.sh  launch_vllm.sh  vllm_serve.yaml
rl_data/: README.md  __init__.py  analyze.py  estimate_cost.py  generate_solutions.py  generate_tasks.py  upload_to_hf.py
rl_data/comparison/: cli.py  core.py  modules.py  styles.py  taxonomy_classifier.py
rl_data/containers/: base_debugging.def  base_intricate.def  base_security.def  base_software_engineering.def  build_bases.sh
rl_data/decontamination/: cli.py  loaders.py  ngram.py
rl_data/generator/: apptainer_def_gen.py  completion_test_gen.py  env.py  fixture_gen.py  sample_solutions.py  task_template_gen.py  vanillux_solver.py
rl_data/scripts/: data_gen_v2_smoke_test.sh  estimate_cost.sh  run_analyze.sh  run_generate_solutions.sh  run_generate_solutions_10k.sh  run_generate_solutions_1k.sh  run_generate_tasks.sh  run_generate_tasks_10k.sh  run_generate_tasks_1k.sh  upload_data_to_hf.sh  upload_data_to_hf_verified.sh
scripts/: compute_stats.py  run_swebench.sh  run_tb2.sh  run_tblite.sh  run_tblite_openai.sh  setup_podman_harbor.sh
scripts/analysis/: analyze_tb2_eval.py  tb2_gemini_tassieagent_eval.md
scripts/beaker/: README.md  run_eval_in_job.sh
scripts/plot/: dppo_vs_grpo.py  group_comparison.py  plot_swerl_step_count.py
scripts/slurm/: run_tb2.slurm  (+3 more)
sft/: data.py  pre_tokenize.py  run_pretokenize.sh  run_sft.sh  train.py
(+24680 files in other folders)
