[project]
name = "tmax"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "harbor",
    "litellm",
    "matplotlib>=3.10.8",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["Vanillux2Agent", "rl_data", "rl_data.generator"]

[project.optional-dependencies]
rl_data = [
    "litellm",
    "pydantic",
    "tenacity",
    "tqdm",
    "datasets",
    "matplotlib",
]
